Bug 1611907 - Remove AssertNotDocumentChannel r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D67093

--HG--
extra : moz-landing-system : lando